2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ATA/ATA.cs:
	  Rename SCSI decoders fields, methods and structs to more
	  adequate names.

	* SCSI/MMC/MMC.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated SCSI decoders by type.

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	* SCSI/VendorString.cs:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Enums.cs:
	* SCSI/Inquiry.cs:
	* SCSI/MMC/OPW.cs:
	* SCSI/MMC/MMC.cs:
	* SCSI/MMC/AACS.cs:
	* SCSI/MMC/CPRM.cs:
	* SCSI/MMC/Enums.cs:
	* SCSI/MMC/Hybrid.cs:
	* SCSI/VendorString.cs:
	* SCSI/MMC/WriteProtect.cs:
	* SCSI/MMC/DiscInformation.cs:
	* SCSI/MMC/TrackInformation.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated SCSI decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* CD/TOC.cs:
	* CD/PMA.cs:
	* CD/ATIP.cs:
	* CD/Session.cs:
	* CD/FullTOC.cs:
	* CD/CDTextOnLeadIn.cs:
	  Rename fields, methods and structs to more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* CD/CD.cs:
	* CD/TOC.cs:
	* CD/PMA.cs:
	* CD/ATIP.cs:
	* CD/Enums.cs:
	* CD/FullTOC.cs:
	* CD/Session.cs:
	* CD/CDTextOnLeadIn.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated CD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DVD/DVD.cs:
	* DVD/DMI.cs:
	* DVD/DDS.cs:
	* DVD/PFI.cs:
	* DVD/PRI.cs:
	* DVD/RMD.cs:
	* DVD/BCA.cs:
	* DVD/UDI.cs:
	* DVD/AACS.cs:
	* DVD/ADIP.cs:
	* DVD/CPRM.cs:
	* DVD/Spare.cs:
	* DVD/Enums.cs:
	* DVD/Layers.cs:
	* DVD/CSS&CPRM.cs:
	* DVD/Cartridge.cs:
	* DiscImageChef.Decoders.csproj:
	  Separated DVD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Floppy/ISO.cs:
	* Floppy/Amiga.cs:
	* Floppy/Enums.cs:
	* Floppy/Apple2.cs:
	* Floppy/System34.cs:
	* Floppy/Commodore.cs:
	* Floppy/AppleSony.cs:
	* Floppy/System3740.cs:
	* Floppy/Perpendicular.cs:
	  Rename fields, methods and structs to more adequate names.
