@@ -35,7 +35,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SCSI\Inquiry.cs" />
-    <Compile Include="ATA\ATA.cs" />
     <Compile Include="Blu-ray\BD.cs" />
     <Compile Include="Floppy\Enums.cs" />
     <Compile Include="Floppy\System3740.cs" />
@@ -78,6 +77,7 @@
     <Compile Include="SCSI\MMC\OPW.cs" />
     <Compile Include="SCSI\Enums.cs" />
     <Compile Include="SCSI\VendorString.cs" />
+    <Compile Include="ATA\Identify.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
